Added Db Connection Properties

--- a/AccountBuddy/src/main/resources/application.properties
+++ b/AccountBuddy/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=AccountBuddy
+spring.datasource.url=jdbc:postgresql://localhost:5432/accountbuddy
+spring.datasource.username=accountbuddyuser
+spring.datasource.password=accountbuddyuser
+spring.datasource.driver-class-name=org.postgresql.Driver
